.kube/deployment-nagios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagios-deployment
  labels:
    app: nagios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nagios
  template:
    metadata:
      labels:
        app: nagios
    spec:
      containers:
      - name: nagios
        image: pogossian/nagios-k8s:v2.2
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
