.kube/service-nagios.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagios-service
  labels:
    app: nagios
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nagios
  type: LoadBalancer
