.kube/ingress-nagios.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nagios-ingress
spec:
  backend:
    serviceName: nagios-service
    servicePort: 80
